fixed overlay nav to collapse on select

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,12 @@ main{
 header{
   background-color: white;
 }
+.navbar.navbar-light.bg-light{
+  background-color: none;
+}
 .bg-light{
-  background-color:none;
+  background-color: none;
+}
+header div.container-fluid{
+  background-color: white;
 }
